--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "@wdio/mocha-framework": "^7.11.1",
     "@wdio/spec-reporter": "^7.10.1",
     "chromedriver": "^92.0.2",
-    "wdio-chromedriver-service": "^7.2.0"
-  },
-  "dependencies": {
+    "wdio-chromedriver-service": "^7.2.0",
     "@wdio/sync": "^7.11.1",
     "chai": "^4.3.4"
-  }
+  },
+  "dependencies": {}
 }
