--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
     "@babel/register": "^7.15.3",
+    "@wdio/allure-reporter": "^7.10.1",
     "@wdio/cli": "^7.11.1",
     "@wdio/local-runner": "^7.11.1",
     "@wdio/mocha-framework": "^7.11.1",
     "@wdio/spec-reporter": "^7.10.1",
-    "chromedriver": "^92.0.2",
-    "wdio-chromedriver-service": "^7.2.0",
     "@wdio/sync": "^7.11.1",
-    "chai": "^4.3.4"
+    "allure-commandline": "^2.13.8",
+    "chai": "^4.3.4",
+    "chromedriver": "^92.0.2",
+    "moment": "^2.29.1",
+    "wdio-chromedriver-service": "^7.2.0"
   },
   "dependencies": {}
 }
