--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/register": "^7.15.3",
     "@wdio/allure-reporter": "^7.10.1",
     "@wdio/cli": "^7.11.1",
+    "@wdio/junit-reporter": "^7.11.1",
     "@wdio/local-runner": "^7.11.1",
     "@wdio/mocha-framework": "^7.11.1",
     "@wdio/spec-reporter": "^7.10.1",
