--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	    "test": "mkdir -p reports/screenshot report && npx wdio"
+      "test": "mkdir -p reports/screenshot report && npx wdio",
+      "report": "npx allure generate reports/allure-results --clean && npx allure open"
   },
   "keywords": [],
   "author": "",
