--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "test": "mkdir -p reports/screenshot report && npx wdio",
-      "report": "npx allure generate reports/allure-results --clean && npx allure open"
+    "update-chrome": "./update-chrome.sh",
+    "making-folders": "mkdir -p -m777 reports/allure-results reports/screenshot report docs && ls -al && pwd && chmod -R 777 ./reports",
+    "test": "npx wdio",
+    "report": "npx allure generate reports/allure-results --clean"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +18,10 @@
     "@babel/preset-env": "^7.15.4",
     "@babel/register": "^7.15.3",
     "@wdio/allure-reporter": "^7.10.1",
-    "@wdio/cli": "^7.11.1",
+    "@wdio/cli": "^7.12.0",
     "@wdio/junit-reporter": "^7.11.1",
     "@wdio/local-runner": "^7.11.1",
-    "@wdio/mocha-framework": "^7.11.1",
+    "@wdio/mocha-framework": "^7.12.0",
     "@wdio/spec-reporter": "^7.10.1",
     "@wdio/sync": "^7.11.1",
     "allure-commandline": "^2.13.8",
