--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [push, pull_request]
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,14 +27,25 @@ jobs:
           run: |
             branch=$(git branch --show-current)
             t=$(date +"%y%m%d-%Hh%Mm%Ss")
-            git checkout -b gh-pages
+            dest="test-results/${branch}/${t}"
+            echo "Destination is: ${dest}"
+            git checkout -b wip
             npm run report
-            mkdir -p ${branch}/${t}
-            cp -r allure-report/* ${branch}/${t}/
+            mkdir -p ${dest}
+            cp -r allure-report/* ${dest}/
             git config --global user.name "githubaction"
             git config --global user.email "githubaction@githubaction.com"
             git status
-            git add ${branch}
-            git commit -m "Add allure reports for ${branch} at ${t} "
+            echo "Git add the test results"
+            git add test-results
+            echo "Git commit the test resutls"
+            git commit -m "Add allure reports for branch: ${branch} at date: ${t} "
+            echo "Fetach all branches"
+            git fetch -a
+            echo "Checkout origin/gh-pages"
+            git checkout -b gh-pages origin/gh-pages
+            echo "Cherry pick on top of github pages"
+            git cherry-pick wip
+            echo "Push the test results to github pages"
             git push origin gh-pages -u --force
-            echo "View test reports here: https://miladfahimi.github.io/volvo-test/${branch}/${t}"
+            echo "View test reports here: https://miladfahimi.github.io/volvo-test/${dest}/"
